# effective-modern-cpp

./: .gitignore  CMakeLists.txt
Concurrency/: CMakeLists.txt  Concurrency.h  main.cpp
Lambda/: CMakeLists.txt  lambda.h  main.cpp
Modern/: CMakeLists.txt  main.cpp  modern.h
Perfect/: CMakeLists.txt  Perfect.h  main.cpp
SmartPointer/: CMakeLists.txt  SmartPointer.h  Store.cpp  Store.h  main.cpp
Trimming/: CMakeLists.txt  main.cpp
TypeDeduction/: CMakeLists.txt  main.cpp  type_deduction.h
auto/: CMakeLists.txt  auto.h  main.cpp
