cmake_minimum_required (VERSION 2.6)
PROJECT(ModernCpp)

INCLUDE_DIRECTORIES("/usr/local/include/boost")

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")

ADD_SUBDIRECTORY(TypeDeduction)
ADD_SUBDIRECTORY(auto)
ADD_SUBDIRECTORY(Modern)
ADD_SUBDIRECTORY(SmartPointer)
ADD_SUBDIRECTORY(Perfect)
ADD_SUBDIRECTORY(Lambda)
ADD_SUBDIRECTORY(Concurrency)